use spring hateoas to build test links; also use @MockBean at the class level to bulk mock components that don't need stubbing